bootstrap and jquery are set

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
       <h1>Hello, {{ title }}</h1>
 
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat corporis libero omnis consectetur ab molestias quam est optio maxime, modi harum accusamus ullam explicabo dolores magni rerum veritatis asperiores vero rem in at repudiandae nisi? Quisquam illum maxime voluptatum quidem harum nostrum reiciendis architecto ab. Consectetur rerum perspiciatis nam, sequi quae est pariatur fugit, expedita maxime voluptates vero quia.</h1>
+      <h3>Lorem ipsum dolor sit amet consectetur <h1>elit. Placeat corporis libero omnis</h1>  consectetur ab molestias quam est optio maxime, modi harum accusamus ullam explicabo dolores magni rerum veritatis asperiores vero rem in at repudiandae nisi? Quisquam illum maxime voluptatum quidem harum nostrum reiciendis architecto ab. Consectetur rerum perspiciatis nam, sequi quae est pariatur fugit, expedita maxime voluptates vero quia.</h3>
       <p>Congratulations! Your app is running. 🎉</p>
     
 
