--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,10 @@
       </nav>
 
       <div class="container">
-     
-    </div>
-           
+        <h1 class="text-center mb-3">Todo List</h1>   
      <app-todo></app-todo>
+    </div>
+      
     
 
 <router-outlet />
