Delete using event

--- a/src/app/MyComponent/todo-item/todo-item.component.html
+++ b/src/app/MyComponent/todo-item/todo-item.component.html
@@ -3,5 +3,5 @@
 <div class="my-3">
 <h3 >{{tododata.title}}</h3>
 <p >{{tododata.desc}}</p>
-<button type="button" class="btn btn-primary">Delete</button>
+<button type="button" class="btn btn-danger"(click)="onClick(tododata)">Delete</button>
 </div>
