--- a/src/app/MyComponent/todos/todo.component.html
+++ b/src/app/MyComponent/todos/todo.component.html
@@ -11,7 +11,7 @@
 
    
    <div *ngFor="let todo of todos">
-    <app-todo-item [tododata]="todo"></app-todo-item>
+    <app-todo-item [tododata]="todo" (todoDelete)="deleteTodo($event)"></app-todo-item>
     
     
    </div>
