insert data todo

--- a/src/app/MyComponent/todo-item/todo-item.component.html
+++ b/src/app/MyComponent/todo-item/todo-item.component.html
@@ -1,7 +1,7 @@
 <!-- <p>todo-item works!</p> -->
 <!-- <div>{{tododata.sno}} -  {{tododata.title}} -   {{tododata.desc}} -  {{tododata.active}}</div> -->
 <div class="my-3">
-<h3 >{{tododata.title}}</h3>
-<p >{{tododata.desc}}</p>
-<button type="button" class="btn btn-danger"(click)="onClick(tododata)">Delete</button>
+<h5 >{{todo.title}}</h5>
+<p >{{todo.descr}}</p>
+<button type="button" class="btn btn-danger btn-sm"(click)="onClick(todo)">Delete</button>
 </div>
