--- a/src/app/MyComponent/todo/todo.component.html
+++ b/src/app/MyComponent/todo/todo.component.html
@@ -9,9 +9,11 @@
     
    </div> -->
 
-   
+   <app-add-todo  (todoAdd)="addTodo($event)"></app-add-todo>
+
+   <h4>Your Todos</h4>
    <div *ngFor="let todo of todos">
-    <app-todo-item [tododata]="todo" (todoDelete)="deleteTodo($event)"></app-todo-item>
+    <app-todo-item [todo]="todo" (todoDelete)="deleteTodo($event)"></app-todo-item>
     
     
    </div>
