--- a/src/app/MyComponent/todo/todo.component.html
+++ b/src/app/MyComponent/todo/todo.component.html
@@ -9,7 +9,10 @@
     
    </div> -->
 
-<app-add-todo (todoAdd)="addTodo($event)"></app-add-todo>
+   <div class="container">
+    <h1 class="text-center mb-3">Todo List</h1> 
+
+<!-- <app-add-todo (todoAdd)="addTodo($event)"></app-add-todo> -->
 
 <h4>Your Todos</h4>
 <div *ngIf="this.todos.length === 0; else elseBlock">
@@ -20,3 +23,4 @@
         <app-todo-item [todo]="todo" (todoDelete)="deleteTodo($event)"></app-todo-item>
     </div>
 </ng-template>
+</div>
